--- a/server/views/taskList/caTasksPostApproval.pug
+++ b/server/views/taskList/caTasksPostApproval.pug
@@ -2,7 +2,7 @@ extends taskListTemplate
 
 block tasks
 
-    - var curfewAddressReady = ['unfinished', 'approved'].includes(licenceStatus.decisions.curfewAddressApproved)
+    - var curfewAddressReady = licenceStatus.decisions.curfewAddressApproved
     - var bassReady = licenceStatus.decisions.bassReferralNeeded && licenceStatus.tasks.bassOffer === 'DONE' && !licenceStatus.decisions.bassWithdrawn
     - var bassExcluded = ['Unavailable', 'Unsuitable'].includes(licenceStatus.decisions.bassAccepted)
 
