--- a/server/views/taskList/tasks/curfewAddressTask.pug
+++ b/server/views/taskList/tasks/curfewAddressTask.pug
@@ -8,14 +8,12 @@ div.paddingBottom
 
         else
             div.pure-u-1.pure-u-md-3-4
-                -var curfewAddressApproved = licenceStatus.decisions.curfewAddressApproved;
-
-                if curfewAddressApproved === 'approved'
-                    | Address checked
-                else if curfewAddressApproved === 'withdrawn'
+                if licenceStatus.decisions.addressWithdrawn
                     span.bold.alert Address withdrawn
-                else if curfewAddressApproved === 'rejected'
+                else if licenceStatus.decisions.addressReviewFailed
                     span.bold.alert Address rejected
+                else if licenceStatus.stage.addressReview === 'DONE'
+                    | Address checked
                 else
                     | Not completed
 
@@ -27,13 +25,13 @@ div.paddingBottom
             -var curfewAddressChoicePath = "/hdc/proposedAddress/curfewAddressChoice/" + prisonerInfo.bookingId
 
             if user.role === 'RO'
-                if curfewAddressApproved === 'rejected'
+                if licenceStatus.decisions.curfewAddressRejected
                     +change(path)
                 else
                     +startContinueChange(licenceStatus.tasks.curfewAddressReview, path)
 
             else if user.role === 'CA' && postApproval
-                if curfewAddressApproved === 'withdrawn'
+                if licenceStatus.decisions.addressWithdrawn
                     +viewEdit(withdrawnPath)
                 else
                     +viewEdit(reviewPath)
@@ -42,7 +40,7 @@ div.paddingBottom
                 if licenceStatus.decisions.optedOut
                     +startContinueChange(licenceStatus.tasks.curfewAddress, curfewAddressChoicePath)
 
-                else if licenceStatus.tasks.curfewAddress !== 'DONE' && curfewAddressApproved === 'unstarted'
+                else if licenceStatus.tasks.curfewAddress === 'UNSTARTED'
                     +startContinueChange(licenceStatus.tasks.curfewAddress, curfewAddressChoicePath)
 
                 else
