--- a/server/views/taskList/tasks/riskManagementTask.pug
+++ b/server/views/taskList/tasks/riskManagementTask.pug
@@ -6,7 +6,10 @@ div.paddingBottom
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
-            if licenceStatus.tasks.riskManagement === 'DONE'
+            if licenceStatus.decisions.addressUnsuitable
+                span.bold.alert Address unsuitable
+
+            else if licenceStatus.tasks.riskManagement === 'DONE'
 
                 if alertBoxNeeded
                     div.pure-g
