implemented tasklist model for eligibility tasks

--- a/server/views/taskList/tasklistBuilder.pug
+++ b/server/views/taskList/tasklistBuilder.pug
@@ -4,6 +4,13 @@ block tasks
     each task in tasklistModel
         -var taskName = task.task
         div.taskListItem.borderBottomLight
+            if taskName === 'eligibilityTask'
+                include tasks/eligibilityTask
+            if taskName === 'informOffenderTask'
+                include tasks/informOffenderTask
+            if taskName === 'proposedAddressTask'
+                include tasks/proposedAddressTask
+
             if taskName === 'bassOfferTask'
                 include tasks/bassOfferTask
             if taskName === 'curfewAddressTask'
@@ -24,6 +31,7 @@ block tasks
                 include tasks/postponementTask
             if taskName === 'HDCRefusalTask'
                 include tasks/HDCRefusalTask
+
             if taskName === 'caSubmitRefusalTask'
                 include tasks/caSubmitRefusalTask
             if taskName === 'caSubmitBassReviewTask'
