--- a/server/views/taskList/tasks/proposedAddressTask.pug
+++ b/server/views/taskList/tasks/proposedAddressTask.pug
@@ -26,7 +26,7 @@ div.largeMarginBottom
             else if decisions.curfewAddressRejected
                 span.alert.bold Address rejected
 
-            else if tasks.curfewAddress === 'DONE'
+            else if tasks.curfewAddressReview === 'DONE'
                 | Completed
 
             else
