added first form for licence variation when no licence exists in system

--- a/server/views/taskList/taskListBuilder.pug
+++ b/server/views/taskList/taskListBuilder.pug
@@ -49,3 +49,6 @@ block tasks
 
             if taskName === 'createLicenceTask'
                 include tasks/createLicenceTask
+
+            if taskName === 'varyLicenceTask'
+                include tasks/varyLicenceTask
