--- a/server/views/taskList/taskListBuilder.pug
+++ b/server/views/taskList/taskListBuilder.pug
@@ -40,7 +40,6 @@ block tasks
             if taskName === 'bassAreaTask'
                 include tasks/bassAreaTask
 
-
             if taskName === 'caSubmitRefusalTask'
                 include tasks/caSubmitRefusalTask
             if taskName === 'caSubmitBassReviewTask'
@@ -57,3 +56,5 @@ block tasks
 
             if taskName === 'varyLicenceTask'
                 include tasks/varyLicenceTask
+            if taskName === 'variationPermissionTask'
+                include tasks/variationPermissionTask
