--- a/server/views/taskList/tasks/createLicenceTask.pug
+++ b/server/views/taskList/tasks/createLicenceTask.pug
@@ -2,6 +2,8 @@
 -var userCanCreate = user.role === 'CA'
 -var stageAllowsCreate = postApproval && licenceStatus.stage !== 'MODIFIED_APPROVAL' && licenceStatus.decisions.approved
 
+-var canCreateVaried = user.role === 'RO' && licenceStatus.stage === 'VARY'
+
 -var isBass = licenceStatus.decisions.bassReferralNeeded
 
 -var curfewAddressComplete = !isBass && licenceStatus.decisions.curfewAddressApproved !== 'withdrawn'
@@ -16,7 +18,7 @@ div.paddingBottom
             | #{statusLabel}
         div.pure-u-1.pure-u-md-1-4.center
 
-            if userCanCreate && stageAllowsCreate && (curfewAddressComplete || bassComplete)
+            if (userCanCreate && stageAllowsCreate && (curfewAddressComplete || bassComplete)) || canCreateVaried
                 -var path = "/hdc/pdf/select/" + bookingId
                 +continue(path)
 
