vary tasklist with standard task mixin. vary address and reporting address with new form

--- a/server/views/taskList/taskListBuilder.pug
+++ b/server/views/taskList/taskListBuilder.pug
@@ -1,9 +1,14 @@
 extends taskListTemplate
+include vary/standardTask
 
 block tasks
     each task in taskListModel
         -var taskName = task.task
         div.taskListItem.borderBottomLight
+
+            if !taskName
+                + standardTask(task)
+
             if taskName === 'eligibilityTask'
                 include tasks/eligibilityTask
             if taskName === 'informOffenderTask'
