--- a/server/views/vary/licenceDetails.pug
+++ b/server/views/vary/licenceDetails.pug
@@ -17,47 +17,13 @@ block content
                 div.pure-g
                     div.pure-u-1.pure-u-md-4-5
                         h3.heading-medium Curfew address
-                        div.form-group.midMarginBottom
-                            label.form-label(for="addressLine1") Building and street
-                            input(id="addressLine1" name="addressLine1" value=userInput.addressLine1 autofocus aria-label="Building and street" class=errorObject.addressLine1 ? "form-control form-control-error" : "form-control")
-                            input.form-control.smallMarginTop(id="addressLine2" name="addressLine2" value=userInput.addressLine2)
-
-                        div.form-group.midMarginBottom
-                            label.form-label(for="addressTown") Town or city
-                            input(id="addressTown" name="addressTown" value=userInput.addressTown aria-label="Town or city" class=errorObject.addressTown ? "form-control form-control-error" : "form-control")
-
-                        div.form-group.midMarginBottom.pure-u-sm-1.pure-u-md-1-2
-                            label.form-label(for="postCode") Postcode
-                            input(id="postCode" name="postCode" value=userInput.postCode aria-label="Postcode" class=errorObject.postCode ? "form-control form-control-error" : "form-control")
-
-                        div.form-group.pure-u-sm-1.pure-u-md-3-4
-                            label.form-label(for="telephone") Telephone
-                            input.form-control(id="telephone" name="telephone" value=userInput.telephone aria-label="Telephone" class=errorObject.telephone ? "form-control form-control-error" : "form-control")
+                        include includes/varyCurfewAddressForm
 
             div.pure-u-1.pure-u-md-1-2
                 div.pure-g
                     div.pure-u-1.pure-u-md-4-5
                         h3.heading-medium Reporting address (optional)
-                        div.form-group.midMarginBottom
-                            label.form-label(for="reportingAddressLine1") Building and street
-                            input(id="reportingAddressLine1" name="reportingAddressLine1" value=userInput.reportingAddressLine1 autofocus aria-label="Building and street" class="form-control")
-                            input.form-control.smallMarginTop(id="reportingAddressLine2" name="reportingAddressLine2" value=userInput.reportingAddressLine2)
-
-                        div.form-group.midMarginBottom
-                            label.form-label(for="addressTown") Town or city
-                            input(id="reportingAddressTown" name="reportingAddressTown" value=userInput.reportingAddressTown aria-label="Town or city" class="form-control")
-
-                        div.form-group.midMarginBottom.pure-u-sm-1.pure-u-md-1-2
-                            label.form-label(for="reportingPostCode") Postcode
-                            input(id="reportingPostCode" name="reportingPostCode" value=userInput.reportingPostCode aria-label="Postcode" class="form-control")
-
-                        div.form-group.pure-u-sm-1.pure-u-md-3-4
-                            label.form-label(for="reportingTelephone") Telephone
-                            input.form-control(id="reportingTelephone" name="reportingTelephone" value=userInput.reportingTelephone aria-label="Telephone" class="form-control")
-
-                        div.form-group.pure-u-sm-1.pure-u-md-3-4
-                            label.form-label(for="reportingContact") Contact name
-                            input.form-control(id="reportingContact" name="reportingContact" value=userInput.reportingContact aria-label="Contact name" class="form-control")
+                        include includes/varyReportingAddressForm
 
         div.pure-g.borderBottom
             div.pure-u-1
