fixed bug in curfew address rejected view

--- a/server/views/proposedAddress/rejected.pug
+++ b/server/views/proposedAddress/rejected.pug
@@ -5,7 +5,7 @@ block content
 
     -var address = data.proposedAddress && data.proposedAddress.curfewAddress || {}
     -var addressReview = data.curfew && data.curfew.curfewAddressReview || {}
-    -var risk = data.risk && data.curfew.riskManagement || {}
+    -var risk = data.risk && data.risk.riskManagement || {}
     -var savedData = data.proposedAddress && data.proposedAddress.rejected && data.proposedAddress.rejected.enterAlternative || {}
 
     div.pure-g.pure-u-1
