link to prisonstaffhub global search. remove internal seach code

--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -4,7 +4,7 @@ block content
     div.pure-g
         if user.role === 'RO'
             div.pure-u-1.searchLink.alignRight.sm-padTop55.u-paddingTop
-                a#searchOffenderLink(href='/hdc/search/offender') Search all offenders
+                a#searchOffenderLink(href=globalSearchUrl) Search all offenders
 
         div.pure-u-1
             div(class= user.role === 'RO' ? "pure-g paddingTop" : "pure-g xlargePaddingTop")
