updated old task layouts for consistent web driver access

--- a/server/views/taskList/taskListBuilder.pug
+++ b/server/views/taskList/taskListBuilder.pug
@@ -47,6 +47,9 @@ block tasks
             if taskName === 'createLicenceTask'
                 include tasks/createLicenceTask
 
+            if taskName === 'refusalTask'
+                include tasks/refusalTask
+
             if taskName === 'varyLicenceTask'
                 include tasks/varyLicenceTask
             if taskName === 'variationPermissionTask'
