--- a/server/views/taskList/tasks/bassOfferTask.pug
+++ b/server/views/taskList/tasks/bassOfferTask.pug
@@ -2,7 +2,8 @@
 -var decisions = licenceStatus.decisions || {}
 
 div.paddingBottom
-    h2.heading-medium BASS address
+    div
+        h2.heading-medium BASS address
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
