--- a/server/views/taskList/tasks/caSubmitBassReviewTask.pug
+++ b/server/views/taskList/tasks/caSubmitBassReviewTask.pug
@@ -1,6 +1,6 @@
 div.largeMarginBottom
-
-    h2.heading-medium Send for BASS area checks
+    div
+        h2.heading-medium Send for BASS area checks
 
     div.pure-g
 
