--- a/server/views/taskList/tasks/caSubmitRefusalTask.pug
+++ b/server/views/taskList/tasks/caSubmitRefusalTask.pug
@@ -1,5 +1,6 @@
 div.largeMarginBottom
-    h2.heading-medium Submit to decision maker
+    div
+        h2.heading-medium Submit to decision maker
 
     div.pure-g
 
