--- a/server/views/taskList/tasks/createLicenceTask.pug
+++ b/server/views/taskList/tasks/createLicenceTask.pug
@@ -11,7 +11,8 @@
 
 
 div.paddingBottom
-    h2.heading-medium Create licence
+    div
+        h2.heading-medium Create licence
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
