--- a/server/views/taskList/tasks/informOffenderTask.pug
+++ b/server/views/taskList/tasks/informOffenderTask.pug
@@ -1,6 +1,6 @@
 div.largeMarginBottom
-
-    h2.heading-medium Inform the offender
+    div
+        h2.heading-medium Inform the offender
 
     div.pure-g
 
