--- a/server/views/taskList/tasks/refusalTask.pug
+++ b/server/views/taskList/tasks/refusalTask.pug
@@ -1,5 +1,6 @@
 div.paddingBottom
-    h2.heading-medium Final decision
+    div
+        h2.heading-medium Final decision
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
