--- a/server/views/taskList/tasks/roSubmitTask.pug
+++ b/server/views/taskList/tasks/roSubmitTask.pug
@@ -1,5 +1,6 @@
 div.paddingBottom.borderBottomLight
-    h2.heading-medium Submit to prison case admin
+    div
+        h2.heading-medium Submit to prison case admin
 
     div.pure-g
         div#submitPcaStatus.pure-u-1.pure-u-md-3-4
