--- a/server/views/taskList/tasks/bassAddressTask.pug
+++ b/server/views/taskList/tasks/bassAddressTask.pug
@@ -3,7 +3,8 @@
 -var offer = decisions.bassAccepted
 
 div.paddingBottom
-    h2.heading-medium BASS address
+    div
+        h2.heading-medium BASS address
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
