--- a/server/views/taskList/tasks/caSubmitAddressReviewTask.pug
+++ b/server/views/taskList/tasks/caSubmitAddressReviewTask.pug
@@ -1,6 +1,6 @@
 div.largeMarginBottom
-
-    h2.heading-medium Submit curfew address
+    div
+        h2.heading-medium Submit curfew address
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
