--- a/server/views/taskList/tasks/caSubmitApprovalTask.pug
+++ b/server/views/taskList/tasks/caSubmitApprovalTask.pug
@@ -1,6 +1,6 @@
 div.paddingBottom
-
-    h2.heading-medium Submit to decision maker
+    div
+        h2.heading-medium Submit to decision maker
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
