--- a/server/views/taskList/tasks/eligibilitySummaryTask.pug
+++ b/server/views/taskList/tasks/eligibilitySummaryTask.pug
@@ -3,7 +3,8 @@
 
 
 div.paddingBottom
-    h2.heading-medium Eligibility and presumed suitability
+    div
+        h2.heading-medium Eligibility and presumed suitability
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
