--- a/server/views/taskList/tasks/proposedAddressTask.pug
+++ b/server/views/taskList/tasks/proposedAddressTask.pug
@@ -8,7 +8,8 @@
 
 
 div.largeMarginBottom
-    h2.heading-medium Curfew address
+    div
+        h2.heading-medium Curfew address
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
 
