--- a/server/views/taskList/tasks/reportingInstructionsTask.pug
+++ b/server/views/taskList/tasks/reportingInstructionsTask.pug
@@ -1,5 +1,6 @@
 div.paddingBottom
-    h2.heading-medium Reporting instructions
+    div
+        h2.heading-medium Reporting instructions
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
