send postponement to nomis

--- a/server/views/finalChecks/postpone.pug
+++ b/server/views/finalChecks/postpone.pug
@@ -5,6 +5,7 @@ block question
 
 block formItems
     - var postponed = data.decision || null;
+    - var postponeReason = data.postponeReason || null;
 
     div.form-group.inline
         div.multiple-choice(data-target="postponeReasonForm")
